* enumerator.c (lazy_flat_map_func): flat_map should call each only   when the value of a block returns a forcable object.   [ruby-core:51401] [Bug #7690]

* enumerator.c (lazy_flat_map): add documentation.

* test/ruby/test_lazy_enumerator.rb: related test.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@38812 b2dd03c8-39d4-4d8f-98ff-823fe69b080e